Closed
Bug 1347179
Opened 4 years ago
Closed 4 years ago
Perma Bustage when Aurora 54 moves to Beta in nsGlobalWindow.cpp:3470:23: error: unused variable 'contentOpener' [-Werror=unused-variable]
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla55
Tracking | Status | |
---|---|---|
firefox52 | --- | unaffected |
firefox-esr52 | --- | unaffected |
firefox53 | --- | unaffected |
firefox54 | --- | fixed |
firefox55 | --- | fixed |
People
(Reporter: cbook, Assigned: nika)
References
()
Details
Attachments
(1 file, 2 obsolete files)
1.47 KB,
patch
|
jcristau
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
/home/worker/workspace/build/src/dom/base/nsGlobalWindow.cpp:3470:23: error: unused variable 'contentOpener' [-Werror=unused-variable] found by uplift simulation that simulates aurora as beta https://treeherder.mozilla.org/logviewer.html#?job_id=83713900&repo=try
Assignee | ||
Comment 2•4 years ago
|
||
This should probably land on both aurora and nightly so we don't have this same problem in the next cycle ;). MozReview-Commit-ID: 27LBQ0mGNaj
Attachment #8847156 -
Flags: review?(ehsan)
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → michael
Flags: needinfo?(michael)
Comment 3•4 years ago
|
||
Comment on attachment 8847156 [details] [diff] [review] Don't compute contentOpener when it won't be used Review of attachment 8847156 [details] [diff] [review]: ----------------------------------------------------------------- This is way too ugly and it forces one to look up the definition of MOZ_DIAGNOSTIC_ASSERT to evaluate its correctness. This is why Unused was invented, please use it instead.
Attachment #8847156 -
Flags: review?(ehsan) → review-
Assignee | ||
Comment 4•4 years ago
|
||
MozReview-Commit-ID: 27LBQ0mGNaj
Attachment #8847203 -
Flags: review?(ehsan)
Assignee | ||
Updated•4 years ago
|
Attachment #8847156 -
Attachment is obsolete: true
Comment 5•4 years ago
|
||
Comment on attachment 8847203 [details] [diff] [review] Don't compute contentOpener when it won't be used Review of attachment 8847203 [details] [diff] [review]: ----------------------------------------------------------------- The commit message needs updating too. :-)
Attachment #8847203 -
Flags: review?(ehsan) → review+
Pushed by michael@thelayzells.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/bb0dc3ec81a5 Mark contentOpener as unused in some optimized builds, r=ehsan
Assignee | ||
Comment 7•4 years ago
|
||
MozReview-Commit-ID: 27LBQ0mGNaj
Assignee | ||
Updated•4 years ago
|
Attachment #8847203 -
Attachment is obsolete: true
Assignee | ||
Comment 8•4 years ago
|
||
Comment on attachment 8847229 [details] [diff] [review] Mark contentOpener as unused in some optimized builds Approval Request Comment [Feature/Bug causing the regression]: bug 1334086 [User impact if declined]: Beta builds of the aurora tree will fail. [Is this code covered by automated tests?]: No [Has the fix been verified in Nightly?]: Just landed [Needs manual test from QE? If yes, steps to reproduce]: No [List of other uplifts needed for the feature/fix]: None [Is the change risky?]: No [Why is the change risky/not risky?]: Just allows the code to build [String changes made/needed]: None
Attachment #8847229 -
Flags: approval-mozilla-aurora?
Comment 9•4 years ago
|
||
Comment on attachment 8847229 [details] [diff] [review] Mark contentOpener as unused in some optimized builds avoid bustage when 54 moves to beta, aurora54+ Yay for fixing those early :)
Attachment #8847229 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Reporter | ||
Comment 10•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/bb0dc3ec81a5
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Updated•4 years ago
|
status-firefox52:
--- → unaffected
status-firefox53:
--- → unaffected
status-firefox54:
--- → affected
status-firefox-esr52:
--- → unaffected
Comment 11•4 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/e49b6dacff0f
Updated•2 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•