Bug 1347179 - Mark contentOpener as unused in some optimized builds, r=ehsan

MozReview-Commit-ID: 27LBQ0mGNaj